# paperfigg

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  paperfig.yaml  pyproject.toml
.github/workflows/: ci.yml  docs-drift.yml  publish.yml
config/: lab_policy.yaml
docs/: docs_manifest.yaml
docs/architecture/: AI-Architecture-Analysis.md
docs/architecture/flows/: index.md
docs/platform/: WINDOWS_PNG.md
docs/templates/: DOMAIN_PACKS.md  HOW_TO_ADD_A_FLOW.md
examples/: sample_paper.md
issues/: 001-qualitative-results-flow.md  002-critique-rule-zero-traceability.md  003-docs-rerun-diff.md  004-example-domain-pack.md  005-windows-png-doctor-test.md  README.md
paperfig/: cli.py  command_catalog.py
paperfig/agents/: __init__.py  architecture_critic.py  critic.py  generator.py  planner.py
paperfig/audits/: __init__.py  reproducibility.py
paperfig/critique/rules/: __init__.py  (+9 more)
paperfig/docsgen/: __init__.py  drift.py  manifest.py  renderer.py
paperfig/exporters/: __init__.py  latex.py  png.py  svg.py
paperfig/lab/: __init__.py  orchestrator.py  policy.py  registry.py  types.py
paperfig/pipeline/: orchestrator.py
paperfig/prompts/: __init__.py  critique_architecture.txt  critique_figure.txt  plan_figure.txt  repro_audit.txt
paperfig/styles/: __init__.py  conference_default.json
paperfig/templates/: __init__.py  compiler.py  lint.py  loader.py
paperfig/utils/: __init__.py  config.py  paperbanana.py  pdf_parser.py  prompts.py  structured_data.py  style_refs.py  traceability.py  types.py
scripts/: check_docs_drift.sh  check_quality.sh
tests/: test_architecture_critic.py  test_cli_extensions.py  test_critic.py  test_docsgen.py  test_lab.py  test_orchestrator.py  test_paperbanana.py  test_parser.py  test_repro_audit.py  test_templates.py
(+28 files in other folders)
